# rocket-manifest

./: CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  justfile  openapi.yaml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  deploy.yml  preview.yml  release.yml  snapshot.yml
design/: tab-management.md
manifest-app/: Cargo.toml
manifest-app/.claude/: settings.local.json
manifest-app/app/: Cargo.toml
manifest-app/app/src/: config.rs  main.rs
manifest-app/feature_editor/: Cargo.toml
manifest-app/feature_editor/src/: editor.rs  editor_tab.rs  lib.rs  text_input.rs
manifest-app/feature_panel/: Cargo.toml
manifest-app/feature_panel/src/: lib.rs
manifest-app/manifest_client/: Cargo.toml
manifest-app/manifest_client/src/: lib.rs
manifest-app/terminal_view/: Cargo.toml
manifest-app/terminal_view/src/: terminal_element.rs  terminal_view.rs
manifest-core/src/db/: mod.rs
manifest-core/src/models/: feature.rs
plugins/claude-code/: README.md
plugins/claude-code/.claude-plugin/: plugin.json
scripts/: bump-version.sh  release.sh  snapshot-db.sh
src/: main.rs
src/api/: middleware.rs  mod.rs
src/api/handlers/: mod.rs
src/db/: mod.rs  schema.rs
src/db/migrations/: 001_initial.sql  003_remove_notes.sql  005_feature_priority.sql  006_remove_story.sql  007_desired_details.sql  008_remove_history_legacy_columns.sql
src/mcp/: cli.rs  client.rs  mod.rs  tree_render.rs  types.rs
src/models/: feature.rs  history.rs  mod.rs  note.rs  project.rs  session.rs  task.rs
tests/: api_spec.rs  db_spec.rs  mcp_protocol_spec.rs  mcp_spec.rs
