[package]
name = "rocket-manifest"
version = "0.1.5"
edition = "2021"
description = "Living feature documentation server for AI-assisted development"
license = "BUSL-1.1"
repository = "https://github.com/rocket-tycoon/rocket-manifest"

[[bin]]
name = "rmf"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.35", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# MCP Server
rmcp = { version = "0.12", features = ["server"] }
schemars = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
directories = "6"

[dev-dependencies]
tokio-test = "0.4"
speculate2 = "0.2"
axum-test = "17"
tempfile = "3"
