[workspace]
members = ["app", "terminal", "terminal_view", "manifest_client", "feature_panel"]
resolver = "2"

[workspace.package]
edition = "2024"
publish = false
license = "MIT"

[workspace.dependencies]
# GPUI from Zed (not published to crates.io)
gpui = { path = "../../zed/crates/gpui" }

# Terminal emulation
alacritty_terminal = "0.25.1-rc1"

# Async/concurrency
futures = "0.3"
smol = "2"
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
itertools = "0.14"
libc = "0.2"

# HTTP client
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde"] }

# Local crates
terminal = { path = "terminal" }
terminal_view = { path = "terminal_view" }
manifest_client = { path = "manifest_client" }
feature_panel = { path = "feature_panel" }
