[workspace]
members = ["app", "terminal", "terminal_view", "manifest_client", "feature_panel", "feature_editor"]
resolver = "2"

[workspace.package]
edition = "2024"
publish = false
license = "MIT"

[workspace.dependencies]
# GPUI from Zed (not published to crates.io)
gpui = { path = "../../zed/crates/gpui" }

# UI component library (fork with soft wrap performance fix)
gpui-component = { git = "https://github.com/rocket-tycoon/gpui-component" }
gpui-component-assets = { git = "https://github.com/rocket-tycoon/gpui-component" }

# Terminal emulation
alacritty_terminal = "0.25.1-rc1"

# Async/concurrency
futures = "0.3"
smol = "2"
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
itertools = "0.14"
libc = "0.2"
unicode-segmentation = "1.10"

# HTTP client
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde"] }

# Local crates
terminal = { path = "terminal" }
terminal_view = { path = "terminal_view" }
manifest_client = { path = "manifest_client" }
feature_panel = { path = "feature_panel" }
feature_editor = { path = "feature_editor" }

# Core library (direct database access)
manifest-core = { path = "../manifest-core" }

[patch.crates-io]
# Override crates.io gpui with our local Zed version
gpui = { path = "../../zed/crates/gpui" }

[patch."https://github.com/zed-industries/zed"]
# Override gpui-component's git gpui dependency with our local Zed version
gpui = { path = "../../zed/crates/gpui" }
