[package]
name = "manifest-app"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "manifest-app"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
terminal.workspace = true
terminal_view.workspace = true
manifest_client.workspace = true
feature_panel.workspace = true
anyhow.workspace = true
uuid.workspace = true
