[package]
name = "manifest-app"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "manifest-app"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
terminal.workspace = true
terminal_view.workspace = true
manifest_client.workspace = true
feature_panel.workspace = true
feature_editor.workspace = true
manifest-core.workspace = true
anyhow.workspace = true
uuid.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = "0.4"
dirs = "5"

[dev-dependencies]
tempfile = "3"
