[package]
name = "feature_editor"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
manifest_client.workspace = true
uuid.workspace = true
unicode-segmentation.workspace = true
