[package]
name = "terminal_view"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
terminal.workspace = true
alacritty_terminal.workspace = true
anyhow.workspace = true
itertools.workspace = true
open = "5"
